--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -3,23 +3,23 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/mobile_navigation"
-    app:startDestination="@+id/navigation_home">
+    app:startDestination="@+id/navigation_home" >
 
     <fragment
-        android:id="@+id/navigation_home"
+        android:id="@+id/home"
         android:name="com.example.mylistapp.ui.home.HomeFragment"
         android:label="@string/title_home"
         tools:layout="@layout/fragment_home" />
 
     <fragment
-        android:id="@+id/navigation_dashboard"
-        android:name="com.example.mylistapp.ui.add.DashboardFragment"
-        android:label="@string/title_dashboard"
-        tools:layout="@layout/fragment_dashboard" />
+        android:id="@+id/search"
+        android:name="com.example.mylistapp.ui.search.SearchFragment"
+        android:label="search"
+        tools:layout="@layout/fragment_search_list" />
 
     <fragment
-        android:id="@+id/navigation_notifications"
-        android:name="com.example.mylistapp.ui.notifications.NotificationsFragment"
-        android:label="@string/title_notifications"
-        tools:layout="@layout/fragment_notifications" />
+        android:id="@+id/checked"
+        android:name="com.example.mylistapp.ui.checked.CheckedFragment"
+        android:label="checked"
+        tools:layout="@layout/fragment_checked_list" />
 </navigation>
