--- a/app/src/main/res/layout/fragment_home_list.xml
+++ b/app/src/main/res/layout/fragment_home_list.xml
@@ -24,7 +24,9 @@
                 android:layout_gravity="center_horizontal"
                 android:background="@drawable/round_edit_text"
                 android:backgroundTint="#DBE6FD"
+                android:drawableLeft="@drawable/baseline_add_24"
                 android:ems="12"
+                android:hint="추가"
                 android:inputType="text"
                 android:minHeight="28dp"
                 android:paddingLeft="10dp"
@@ -32,7 +34,7 @@
                 android:textColor="#000000" />
 
             <ImageButton
-                android:id="@+id/itemAddBtn"
+                android:id="@+id/itemSearchBtn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="right"
