--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -9,8 +9,12 @@
         android:id="@+id/itemTxt"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:layout_margin="@dimen/text_margin"
         android:layout_weight="10"
+        android:gravity="center_vertical"
+        android:paddingLeft="15dp"
+        android:paddingTop="15dp"
+        android:paddingBottom="15dp"
+        android:text="item"
         android:textAppearance="?attr/textAppearanceListItem"
         android:textSize="20sp" />
 
