--- a/app/src/main/res/layout/fragment_search_list.xml
+++ b/app/src/main/res/layout/fragment_search_list.xml
@@ -24,23 +24,14 @@
                 android:layout_gravity="center_horizontal"
                 android:background="@drawable/round_edit_text"
                 android:backgroundTint="#DBE6FD"
+                android:drawableLeft="@drawable/baseline_search_24"
                 android:ems="12"
+                android:hint="검색"
                 android:inputType="text"
                 android:minHeight="28dp"
                 android:paddingLeft="10dp"
                 android:paddingRight="10dp"
                 android:textColor="#000000" />
-
-            <ImageButton
-                android:id="@+id/itemAddBtn"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="right"
-                android:layout_marginRight="40dp"
-                android:background="#fff"
-                android:src="@drawable/baseline_add_24"
-                android:text="Button"
-                android:visibility="invisible" />
 
         </androidx.appcompat.widget.Toolbar>
 
@@ -49,7 +40,7 @@
     <androidx.recyclerview.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
-        android:id="@+id/list"
+        android:id="@+id/itemList"
         android:name="com.example.mylistapp.ui.search.SearchFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
